--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
-streamlit==1.32.0
-pandas==2.1.4
-matplotlib==3.8.2
-numpy==1.26.2
-langchain-huggingface==0.0.4
-langchain-community==0.0.21
-langchain-core==0.1.23
-transformers==4.37.2
-torch==2.1.2
-sentence-transformers==2.2.2
-faiss-cpu==1.7.4
-scikit-learn==1.3.2
-python-dateutil==2.8.2
+langchain==0.3.25
+langchain_community==0.3.23
+langchain_core==0.3.59
+langchain_huggingface==0.2.0
+matplotlib==3.10.1
+numpy==2.2.5
+pandas==2.2.3
+scikit_learn==1.6.1
+streamlit==1.33.0
+torch==2.2.1+cu121
+transformers==4.51.3
