--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-langchain==0.3.25
-langchain_community==0.3.23
-langchain_core==0.3.59
-langchain_huggingface==0.2.0
-matplotlib==3.10.1
-numpy==2.2.5
-pandas==2.2.3
-scikit_learn==1.6.1
-streamlit==1.33.0
-torch==2.2.1+cu121
-transformers==4.51.3
+streamlit==1.34.0
+pandas==2.2.2
+numpy==1.26.4
+matplotlib==3.8.4
+scikit-learn==1.4.2
+torch==2.3.0
+openai==1.30.1
+transformers==4.40.1
+langchain==0.1.16
+langchain-community==0.0.37
+langchain-huggingface==0.0.3
