--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
-streamlit==1.34.0
-pandas==2.2.2
-numpy==1.26.4
-matplotlib==3.8.4
-scikit-learn==1.4.2
-torch==2.3.0
-openai==1.30.1
-transformers==4.40.1
-langchain==0.1.16
-langchain-community==0.0.37
-langchain-huggingface==0.0.3
+streamlit
+pandas
+matplotlib
+scikit-learn
+python-dotenv
+openai
